# agent-to-bricks

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
.learnings/: ERRORS.md  LEARNINGS.md
cli/: .goreleaser.yaml  CLAUDE.md  go.mod  go.sum  main.go  schema.json
cli/cmd/: abilities.go  abilities_test.go  ability_helpers.go  agent.go  agent_test.go  classes.go  components.go  config.go  convert.go  convert_test.go  discover.go  doctor.go  elements.go  frameworks.go  generate.go  init.go  media.go  patch.go  root.go  root_test.go  schema.go  schema_test.go  search.go  site.go  site_discovery.go  site_test.go  styles.go  templates.go  update.go  update_test.go  validate.go  version.go  version_test.go  woo.go
docs/: acss-internals.md  adr-001-integration-choice.md  execution-plan.md  extension-spec.md  plugin-spec.md  research-log.md  risk-register.md  runtime-map.md  templates.md
docs/plans/: 2026-02-21-agent-protocol-design.md  2026-02-21-agent-protocol-implementation.md  2026-02-21-agent-to-bricks-v2-design.md  2026-02-21-agent-to-bricks-v2-implementation.md  (+24 more)
gui/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: config.rs  lib.rs  main.rs
plugin/: CLAUDE.md
prompts/: check.md  implement.md  release.md
schema/: ai-bricks.schema.json
scripts/: build-plugin-zip.sh  deploy-staging.sh  sync-version.sh  verify-local-install.sh  verify-staging-release.sh
snippets/: probe-network-hooks.js  probe-runtime.js  probe-selection.js  test-insert-element.js  test-save-flow.js
test-data/: our-story-section.json
website/: CLAUDE.md  README.md  astro.config.mjs  package-lock.json  package.json
(+703 files in other folders)
