[package]
name = "agent-to-bricks-gui"
version = "0.1.0"
description = "Agent to Bricks GUI"
edition = "2021"

[lib]
name = "agent_to_bricks_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-pty = "0.2.1"
dirs = "6.0.0"

